# ai-mentor-cli

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: app.rs  main.rs  mentor.rs  rag.rs  ui.rs
