[package]
name = "ai-mentor-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
ollama-rs = { version = "0.2.6", features = ["stream"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-input = "0.8"
arboard = "3.4"
ndarray = "0.15"
